--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,9 +1,15 @@
 <p>
-    <i>( Describe task in general )</i>
+    Our robots like a game that require ability to calculate.  In the latest journey they found a new game -- Numbered Triangles.
+    In this game a player take 6 chips from the pile. Each chip is a equilateral triangle with three numbers on the edges.
+
+    You can move, rotate and flip the chips so they form a hexagon.
+    The hexagon is <strong>only legal</strong> if edges common to two triangles have the same number on them.
+    <!--You may not flip any triangle over.-->
 </p>
 
 <p>
-    Sum two passed ints
+    The score for a legal hexagon is the sum of the numbers on the outside six edges.
+    The player's goal to find the highest score that can be achieved with the given six chips.
 </p>
 
 <p style="text-align: center;">
@@ -11,29 +17,26 @@
     <img class="for_editor_only" title="example" src="{{MEDIA}}example.png" alt="example" width="380px"/>
 </p>
 
-<p><i>( Explain input and output values )</i></p>
+<p>Each chip is represented as a list with three natural numbers.
+    You should learn our robots to find the highest score for the given chips and return it as a number.</p>
 <p>
-    <strong>Input: </strong> Two arguments. Both are int
+    <strong>Input: </strong> The chips' info. A list of lists. Each list contain three natural numbers (int).
 </p>
 
 <p>
-    <strong>Output: </strong> Int. 
+    <strong>Output: </strong> The highest possible score (int).
 </p>
-
 
 
 <div class="for_info_only">
-    <p><i>( Put some usage examples )</i></p>
     <p>
         <strong>Example:</strong>
     </p>
     <pre class="brush: python">
-checkio(3, 2) == 5
-checkio(5, 7) == 12
     </pre>
 </div>
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    <i>(Here you can explain how it can be used in development and what is usage of this.)</i>
+    Optimization software. Constraints problems. Game mechanics.
 </p>
