referee and tests

--- a/info/task_description.html
+++ b/info/task_description.html
@@ -17,8 +17,11 @@
     <img class="for_editor_only" title="example" src="{{MEDIA}}example.png" alt="example" width="380px"/>
 </p>
 
-<p>Each chip is represented as a list with three natural numbers.
-    You should learn our robots to find the highest score for the given chips and return it as a number.</p>
+<p>
+    Each chip is represented as a list with three natural numbers.
+    You should learn our robots to find the highest score for the given chips and return it as a number.
+    If you can not form legal hexagon from the chips, then return 0.
+</p>
 <p>
     <strong>Input: </strong> The chips' info. A list of lists. Each list contain three natural numbers (int).
 </p>
