--- a/info/task_description.html
+++ b/info/task_description.html
@@ -13,8 +13,8 @@
 </p>
 
 <p style="text-align: center;">
-    <img class="for_info_only" title="example" src="{{MEDIA}}example.png" alt="example" width="392px"/>
-    <img class="for_editor_only" title="example" src="{{MEDIA}}example.png" alt="example" width="380px"/>
+    <img class="for_info_only" title="numbered-triangles" src="{{MEDIA}}numbered-triangles.png" alt="numbered-triangles" width="392px"/>
+    <img class="for_editor_only" title="numbered-triangles" src="{{MEDIA}}numbered-triangles.png" alt="numbered-triangles" width="380px"/>
 </p>
 
 <p>
