--- a/info/task_description.html
+++ b/info/task_description.html
@@ -35,10 +35,15 @@
     <p>
         <strong>Example:</strong>
     </p>
-<pre class="brush: python">checkio([[1, 4, 20], [3, 1, 5], [50, 2, 3], [5, 2, 7], [7, 5, 20], [4, 7, 50]]) == 152
-checkio([[1, 10, 2], [2, 20, 3], [3, 30, 4], [4, 40, 5], [5, 50, 6], [6, 60, 1]]) == 210
-checkio([[1, 2, 3], [2, 1, 3], [4, 5, 6], [6, 5, 4], [5, 1, 2], [6, 4, 3]]) == 21
-checkio([[5, 9, 5], [9, 6, 9], [6, 7, 6], [7, 8, 7], [8, 1, 8], [1, 2, 1]]) == 0
+<pre class="brush: python">checkio([[1, 4, 20], [3, 1, 5], [50, 2, 3],
+         [5, 2, 7], [7, 5, 20], [4, 7, 50]]) == 152
+checkio([[1, 10, 2], [2, 20, 3], [3, 30, 4],
+         [4, 40, 5], [5, 50, 6], [6, 60, 1]]) == 210
+checkio([[1, 2, 3], [2, 1, 3], [4, 5, 6],
+         [6, 5, 4], [5, 1, 2], [6, 4, 3]]) == 21
+checkio([[5, 9, 5], [9, 6, 9], [6, 7, 6],
+         [7, 8, 7], [8, 1, 8], [1, 2, 1]]) == 0
+
 </pre>
 </div>
 
