Edits to English

--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,9 +1,9 @@
 <p>
-    Our robots like a game that require ability to calculate.  In the latest journey they found a new game -- Numbered Triangles.
-    In this game a player take 6 chips from the pile. Each chip is a equilateral triangle with three numbers on the edges.
+    Our robots like a game that requires the ability to calculate.  Mission control recently sent them an new game to occupy their minds while flying from on eIsland to the next. This game is called ""Numbered Triangles".
+    In the game, a player takes 6 chips from the pile. Each chip is made from an equilateral triangle with three numbers on the edges.
 
     You can move, rotate and flip the chips so they form a hexagon.
-    The hexagon is <strong>only legal</strong> if edges common to two triangles have the same number on them.
+    The hexagon is <strong>only legal</strong> if adjacent edges for each triangle have the same number.
     <!--You may not flip any triangle over.-->
 </p>
 
@@ -19,8 +19,8 @@
 
 <p>
     Each chip is represented as a list with three natural numbers.
-    You should learn our robots to find the highest score for the given chips and return it as a number.
-    If you can not form legal hexagon from the chips, then return 0.
+    You should help the robots to find the highest score for the given chips and return it as a number.
+    If you cannot form legal hexagon from the chips, then return 0.
 </p>
 <p>
     <strong>Input: </strong> The chips' info. A list of lists. Each list contain three natural numbers (int).
