--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,17 +1,15 @@
 <p>
-    Our robots like games that require the ability to calculate.
-    Mission control recently sent them the new game to occupy their minds while flying from one Island to the next.
+    Our robots like games that require the ability to calculate equations.
+    Mission control recently sent them the new game to occupy their time while flying from one Island to the next.
     This game is called "Numbered Triangles".
-    In the game, a player takes 6 chips from the pile.
-    Each chip is made from an equilateral triangle with three numbers on the edges.
-
+    Players take 6 chips from the pile, each chip is made of an equilateral triangle with three numbers one on each edge.
     You can move, rotate and flip the chips so they form a hexagon.
-    The hexagon is <strong>only legal</strong> if adjacent edges for each triangle have the same number.
+    The hexagon is <strong>only legal</strong> if the adjacent edges for each triangle have matching numbers.
 </p>
 
 <p>
     The score for a legal hexagon is the sum of the numbers on the outside six edges.
-    The player's goal to find the highest score that can be achieved with the given six chips.
+    The player's goal is to find the highest score that can be achieved with the given six chips.
 </p>
 
 <p style="text-align: center;">
@@ -29,15 +27,15 @@
 
 <p>
     Each chip is represented as a list with three positive numbers.
-    You should help the robots to find the highest score for the given chips and return it as a number.
-    If you cannot form legal hexagon from the chips, then return 0.
+    You should help the robots find the highest score for the given chips and return the score as a number.
+    If you cannot form legal hexagon from the chips, then return a score of 0.
 </p>
 <p>
-    <strong>Input: </strong> The chips' info. A list of lists. Each list contain three integers.
+    <strong>Input: </strong> The chip info as a list of lists. Each list contain three integers.
 </p>
 
 <p>
-    <strong>Output: </strong> The highest possible score, as an integer.
+    <strong>Output: </strong> The highest possible score as an integer.
 </p>
 
 
@@ -59,9 +57,9 @@ checkio([[5, 9, 5], [9, 6, 9], [6, 7, 6],
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    This concept is used in optimization systems,
-    because you have constraints but you should get the maximum from these constraints.
-    And of course this algorithms can be useful for the realisation of game mechanics.
+    This concept is used in optimization systems;
+    you have constraints but you should work to get the most with these constraints.
+    Of course this algorithm can be useful for the realisation of gameplay mechanics.
 </p>
 
 <p>
