--- a/info/task_short_description.html
+++ b/info/task_short_description.html
@@ -1,1 +1,1 @@
-Find the highest score that can be achieved with the given six tringle chips.
+Help the robots win with the highest score that can be achieved in a triangle game
